--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -12,84 +12,91 @@
         Width="440"
         Loaded="Loded"
         Title="{Binding}"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        MouseDown="Drag"
+        Background="Transparent"
         >
 
     <Window.Resources>
         <local:DroneBattryToChargeVisability x:Key="DroneBattryToChargeVisability"/>
     </Window.Resources>
-    
-    <Grid>
-        <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
-            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="ID" Width="108" />
-                <TextBox x:Name="BaseStationID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Name"  Width="108"  />
-                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Charge Slots"  Width="108"  />
-                <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
-                <Label  Content="Location" Width="108" />
-                <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+    <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White">
+        <Grid>
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right" Margin="0,15,14,523"/>
+
+            <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+                <StackPanel Height="50"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="ID" Width="108" />
+                    <TextBox x:Name="BaseStationID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
                 </StackPanel>
-            </StackPanel>
-            <StackPanel Height="20">
-
-            </StackPanel>
-
-            <Button x:Name="AddingButton" Margin="3" Content="Add New BaseStation" Width="180" Click="OnClickAddBaseStationButton" />
-
-        </StackPanel>
-
-        <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
-            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="ID" Width="108" />
-                <TextBox Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Name"  Width="108"  />
-                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Charge Slots"  Width="108"  />
-                <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
-                <Label  Content="Location" Width="108" />
-                <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="true" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Name"  Width="108"  />
+                    <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Charge Slots"  Width="108"  />
+                    <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label  Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                        <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Height="20">
+
+                </StackPanel>
+
+                <Button x:Name="AddingButton" Margin="3" Content="Add New BaseStation" Width="180" Click="OnClickAddBaseStationButton" />
+
             </StackPanel>
-            <StackPanel Height="10"></StackPanel>
-            <StackPanel>
-                <ListView x:Name="listViewOfBaseStatin_ChargingDrones" ItemsSource="{Binding}" Height="200">
-                    <ListView.Background>
-                        <ImageBrush Opacity="10"/>
-                    </ListView.Background>
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
-                            <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+
+            <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+                <StackPanel Height="50"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="ID" Width="108" />
+                    <TextBox Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Name"  Width="108"  />
+                    <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Charge Slots"  Width="108"  />
+                    <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label  Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="true" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                        <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Height="10"></StackPanel>
+                <StackPanel>
+                    <ListView x:Name="listViewOfBaseStatin_ChargingDrones" ItemsSource="{Binding}" Height="200">
+                        <ListView.Background>
+                            <ImageBrush Opacity="10"/>
+                        </ListView.Background>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                                <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+
+                <StackPanel Height="20">
+
+                </StackPanel>
+
+                <Button x:Name="UpdateButton" Margin="3" Content="Update BaseStation" Width="180" Click="OnClickUpdateBaseStationButton" />
+
             </StackPanel>
-
-            <StackPanel Height="20">
-
-            </StackPanel>
-
-            <Button x:Name="UpdateButton" Margin="3" Content="Update BaseStation" Width="180" Click="OnClickUpdateBaseStationButton" />
-
-        </StackPanel>
-    </Grid>
+        </Grid>
+    </Border>
 </Window>
