--- a/dotNet5782_8995_8035/PL/ContactUsWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ContactUsWindow.xaml
@@ -9,19 +9,28 @@
         Title="Contact Us"
         Height="350"
         Width="350"
-        ResizeMode="NoResize">
-    <Grid>
-        <StackPanel x:Name="ContactStack">
-            <StackPanel Height="20"/>
-            <TextBox TextWrapping="Wrap" Width="300" Height="180"
+        ResizeMode="NoResize"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        MouseDown="Drag"
+        Background="Transparent"
+        >
+    <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White">
+        <Grid>
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right" Margin="0,10,14,278"/>
+            <StackPanel x:Name="ContactStack" Margin="10,-10,0,-7">
+                <StackPanel Height="70">
+                </StackPanel>
+                <TextBox TextWrapping="Wrap" Width="293" Height="126"
                      materialDesign:HintAssist.Hint="Please, tell us abut what are you think"  
                      Style="{StaticResource MaterialDesignFilledTextBox}"
-                     FontSize="14"
+                     FontSize="14" TextChanged="TextBox_TextChanged" RenderTransformOrigin="0.796,0.744"
                      />
-            <StackPanel Height="20"/>
-            
-            <Button Content="Send" Width="170" Click="Send_Click"/>
+                <StackPanel Height="20"/>
 
-        </StackPanel>
-    </Grid>
+                <Button Content="Send" Width="170" Click="Send_Click"/>
+
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
