--- a/dotNet5782_8995_8035/PL/CustomerWindow.xaml
+++ b/dotNet5782_8995_8035/PL/CustomerWindow.xaml
@@ -12,103 +12,111 @@
         Width="450"
         Loaded="Loded"
         Title="{Binding}"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        MouseDown="Drag"
+        Background="Transparent"
+    
         >
 
     <Window.Resources>
 
     </Window.Resources>
+    <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40"  Background="White" >
+        <Grid>
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Left" Margin="369,11,0,647"/>
 
-    <Grid>
-        <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
-            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="ID" Width="108" />
-                <TextBox x:Name="customerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Name"  Width="108"  />
-                <TextBox x:Name="customerName" Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Phone"  Width="108"  />
-                <TextBox x:Name="customerPhone" Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
-                <Label  Content="Location" Width="108" />
-                <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+            <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+                <StackPanel Height="50"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="ID" Width="108" />
+                    <TextBox x:Name="customerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
                 </StackPanel>
-            </StackPanel>
-
-            <StackPanel Height="20">
-
-            </StackPanel>
-
-            <Button x:Name="AddingButton" Margin="3" Content="Add New Customer" Width="180" Click="OnClickAddCustomerButton" />
-
-        </StackPanel>
-
-        <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
-            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="ID" Width="108" />
-                <TextBox x:Name="UpdatecustomerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Name"  Width="108"  />
-                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Phone"  Width="108"  />
-                <TextBox Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
-                <Label  Content="Location" Width="108" />
-                <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Name"  Width="108"  />
+                    <TextBox x:Name="customerName" Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Phone"  Width="108"  />
+                    <TextBox x:Name="customerPhone" Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label  Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                        <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel Height="20">
+
+                </StackPanel>
+
+                <Button x:Name="AddingButton" Margin="3" Content="Add New Customer" Width="180" Click="OnClickAddCustomerButton" />
+
             </StackPanel>
-            <StackPanel Height="10"></StackPanel>
-            <StackPanel>
-                <Label Content="Parcels that the customer Sent"  Width="363"  HorizontalAlignment="Left" FontWeight="Bold"/>
-                <ListView x:Name="listViewOfBaseStatin_FromCustomer" ItemsSource="{Binding}" Height="150" >
-                    <ListView.Background>
-                        <ImageBrush Opacity="10"/>
-                    </ListView.Background>
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
-                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
-                            <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
-                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-            </StackPanel>
-            <StackPanel Height="10"></StackPanel>
+
+            <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+                <StackPanel Height="50"/>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="ID" Width="108" />
+                    <TextBox x:Name="UpdatecustomerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Name"  Width="108"  />
+                    <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Phone"  Width="108"  />
+                    <TextBox Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label  Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                        <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Height="10"></StackPanel>
                 <StackPanel>
-                <Label Content="Parcels that the customer resivig"  Width="363"  HorizontalAlignment="Left" FontWeight="Bold"/>
-                <ListView x:Name="listViewOfBaseStatin_ToCustomer" ItemsSource="{Binding}" Height="150">
-                    <ListView.Background>
-                        <ImageBrush Opacity="10"/>
-                    </ListView.Background>
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
-                            <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
-                            <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
-                            <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-            </StackPanel>
+                    <Label Content="Parcels that the customer Sent"  Width="363"  HorizontalAlignment="Left" FontWeight="Bold"/>
+                    <ListView x:Name="listViewOfBaseStatin_FromCustomer" ItemsSource="{Binding}" Height="150" >
+                        <ListView.Background>
+                            <ImageBrush Opacity="10"/>
+                        </ListView.Background>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                                <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                                <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
+                                <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+                <StackPanel Height="10"></StackPanel>
+                <StackPanel>
+                    <Label Content="Parcels that the customer resivig"  Width="363"  HorizontalAlignment="Left" FontWeight="Bold"/>
+                    <ListView x:Name="listViewOfBaseStatin_ToCustomer" ItemsSource="{Binding}" Height="150">
+                        <ListView.Background>
+                            <ImageBrush Opacity="10"/>
+                        </ListView.Background>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
+                                <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
+                                <GridViewColumn Header = "Priority" DisplayMemberBinding="{Binding Path = Priority}" />
+                                <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
 
                 <StackPanel Height="20"></StackPanel>
 
-            <Button x:Name="UpdateButton" Margin="3" Content="Update Customer" Width="180" Click="OnClickUpdateCustomerButton" />
+                <Button x:Name="UpdateButton" Margin="3" Content="Update Customer" Width="180" Click="OnClickUpdateCustomerButton" />
 
-        </StackPanel>
-    </Grid>
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
