--- a/dotNet5782_8995_8035/PL/MainWindow.xaml
+++ b/dotNet5782_8995_8035/PL/MainWindow.xaml
@@ -16,29 +16,38 @@
         TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"        
         FontFamily="{DynamicResource MaterialDesignFont}"
+        Background="Transparent"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        MouseDown="Drag"
     >
 
     <Window.Resources>
         <local:AccssesAtholerasationToVisability x:Key="accssesAtholerasationToVisability"/>
     </Window.Resources>
-    
-    <Window.Background>
+
+    <!--<Window.Background>
         <ImageBrush ImageSource = "/images/8.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
+    </Window.Background>-->
+    <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40">
+        <Border.Background>
+            <ImageBrush ImageSource = "/images/8.jpg" Stretch="UniformToFill"/>
+        </Border.Background>
 
-    <Grid Name="UpGrid" HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
-        <Grid.Background>
+        <Grid Name="UpGrid" HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
+            <!--<Grid.Background>
             <ImageBrush/>
-        </Grid.Background>
-         <Label x:Name="Welcome" Content="Welcome" HorizontalAlignment="Left" Height="81" Margin="77,60,0,0" VerticalAlignment="Top" Width="289" Foreground="#FF2C52A2" FontSize="55" FontFamily="MV Boli"/>
+        </Grid.Background>-->
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="1138,12,18,476"/>
 
-        <StackPanel Orientation="Vertical" Margin="48,146,887,38" RenderTransformOrigin="0.5,0.5">
-            <Button Content="Manager"  Height="50" Width="150" Margin="10" Click="Manager_Click"/>
-            <Button Content="Employee"  Height="50" Width="150" Margin="10" Click="Employee_Click"/>
-            <Button Content="Customer"  Height="50" Width="150" Margin="10" Click="Customer_Click"/>
-            <Button Content="Guest"  Height="50" Width="150" Margin="10" Click="Guest_Click"/>
-        </StackPanel>
-        <Button Content="Sign Up"
+            <Label x:Name="Welcome" Content="Welcome" HorizontalAlignment="Left" Height="108" Margin="139,33,0,0" VerticalAlignment="Top" Width="404" Foreground="#FF2C52A2" FontSize="80" FontFamily="MV Boli"/>
+            <StackPanel Orientation="Vertical" Margin="48,146,887,38" RenderTransformOrigin="0.5,0.5">
+                <Button Content="Manager"  Height="50" Width="150" Margin="10" Click="Manager_Click"/>
+                <Button Content="Employee"  Height="50" Width="150" Margin="10" Click="Employee_Click"/>
+                <Button Content="Customer"  Height="50" Width="150" Margin="10" Click="Customer_Click"/>
+                <Button Content="Guest"  Height="50" Width="150" Margin="10" Click="Guest_Click"/>
+            </StackPanel>
+            <Button Content="Sign Up"
                 HorizontalAlignment="Left" 
                 Margin="115,466,0,0" 
                 VerticalAlignment="Top" 
@@ -50,23 +59,23 @@
                     materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"   
                     materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
                />
-        <Button Content="Contact Us" HorizontalAlignment="Left" Margin="992,462,0,0" VerticalAlignment="Top" Width="150" Height="30" Click="ContactUs_Click"/>
-        <StackPanel x:Name="LoginStack" Margin="343,146,686,111" Visibility= "{Binding Converter={StaticResource accssesAtholerasationToVisability}}" >
+            <Button Content="Contact Us" HorizontalAlignment="Left" Margin="992,462,0,0" VerticalAlignment="Top" Width="150" Height="30" Click="ContactUs_Click"/>
+            <StackPanel x:Name="LoginStack" Margin="343,146,686,111" Visibility= "{Binding Converter={StaticResource accssesAtholerasationToVisability}}" >
 
-            <TextBox Name="UserName" TextWrapping="Wrap" Width="200" materialDesign:HintAssist.Hint="User Name" Style="{StaticResource MaterialDesignFilledTextBox}"/>
-            
-            <PasswordBox x:Name="Password" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFilledPasswordBox}"/>
+                <TextBox Name="UserName" TextWrapping="Wrap" Width="200" materialDesign:HintAssist.Hint="User Name" Style="{StaticResource MaterialDesignFilledTextBox}"/>
 
-            <Button Content="Log In" Click="Login_Click"
+                <PasswordBox x:Name="Password" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFilledPasswordBox}"/>
+
+                <Button Content="Log In" Click="Login_Click"
                     Style="{StaticResource MaterialDesignRaisedButton}"
                 materialDesign:ButtonProgressAssist.Value="-1"
                 materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"   
                 materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
             />
 
-            <Label Name="MistakenPasswordOrName" Visibility="Collapsed" Content="User Name Or Password Is Incorrect" Foreground="Red" FontSize="10" HorizontalAlignment="Center"/>
-            
-        </StackPanel>
-        <!---->
-    </Grid>
+                <Label Name="MistakenPasswordOrName" Visibility="Collapsed" Content="User Name Or Password Is Incorrect" Foreground="Red" FontSize="10" HorizontalAlignment="Center"/>
+
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
