--- a/dotNet5782_8995_8035/PL/SignUpWindow.xaml
+++ b/dotNet5782_8995_8035/PL/SignUpWindow.xaml
@@ -8,44 +8,53 @@
         mc:Ignorable="d"
         Title="Sign Up" 
         Height="450"
-        Width="440">
-    <Grid>
-        <StackPanel x:Name="SignUpStack"  Margin="5" HorizontalAlignment="Stretch">
-            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="ID" Width="108" />
-                <TextBox x:Name="customerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Name"  Width="108"  />
-                <TextBox x:Name="customerName" Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <Label Content="Phone"  Width="108"  />
-                <TextBox x:Name="customerPhone" Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
-            </StackPanel>
-            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
-                <Label  Content="Location" Width="108" />
-                <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+        Width="440"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        MouseDown="Drag"
+        Background="Transparent"
+        >
+    <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White">
+        <Grid>
+            <StackPanel x:Name="SignUpStack"  Margin="5" HorizontalAlignment="Stretch">
+                <Grid>
+                    <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Left" Margin="350,4,0,-4"/>
+                </Grid>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="ID" Width="108" />
+                    <TextBox x:Name="customerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Name"  Width="108"  />
+                    <TextBox x:Name="customerName" Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                </StackPanel>
+                <StackPanel Margin="3" Orientation="Horizontal">
+                    <Label Content="Phone"  Width="108"  />
+                    <TextBox x:Name="customerPhone" Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label  Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                        <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel Height="20">
+
+                </StackPanel>
+
+                <Button x:Name="SignUpButton" Margin="3" Content="Sign Up" Width="180" Click="SignUpButton_Click" />
+                <StackPanel x:Name="iconsStack" Orientation="Horizontal" Height="150">
+                    <materialDesign:PackIcon Kind="Google"/>
+                    <materialDesign:PackIcon Kind="Facebook" />
+                    <materialDesign:PackIcon Kind="Apple" />
+                    <materialDesign:PackIcon Kind="Android" />
+                    <materialDesign:PackIcon Kind="Whatsapp" />
+
+
                 </StackPanel>
             </StackPanel>
-
-            <StackPanel Height="20">
-
-            </StackPanel>
-
-            <Button x:Name="SignUpButton" Margin="3" Content="Sign Up" Width="180" Click="SignUpButton_Click" />
-            <StackPanel x:Name="iconsStack" Orientation="Horizontal" Height="150">
-                <materialDesign:PackIcon Kind="Google"/>
-                <materialDesign:PackIcon Kind="Facebook" />
-                <materialDesign:PackIcon Kind="Apple" />
-                <materialDesign:PackIcon Kind="Android" />
-                <materialDesign:PackIcon Kind="Whatsapp" />
-                
-                
-            </StackPanel>
-        </StackPanel>
-    </Grid>
+        </Grid>
+    </Border>
 </Window>
